WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276026
[MathML] <mfrac> with out-of-flow numerator/denominator produces unexpected result
https://bugs.webkit.org/show_bug.cgi?id=276026
Summary
[MathML] <mfrac> with out-of-flow numerator/denominator produces unexpected r...
zalan
Reported
2024-06-28 20:01:55 PDT
<
rdar://130757408
>
Attachments
[fast-cq]Patch
(3.40 KB, patch)
2024-06-28 20:35 PDT
,
zalan
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
zalan
Comment 1
2024-06-28 20:35:08 PDT
Created
attachment 471770
[details]
[fast-cq]Patch
EWS
Comment 2
2024-06-29 13:03:42 PDT
Committed
280505@main
(c37d84f4267d): <
https://commits.webkit.org/280505@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 471770
[details]
.
Frédéric Wang (:fredw)
Comment 3
2024-07-03 00:14:47 PDT
Comment on
attachment 471770
[details]
[fast-cq]Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=471770&action=review
> COMMIT_MESSAGE:8 > +(Alternatively we can mark such content as invalid as they are certainly expected to be inflow boxes, but the rest of the MathML renderers follow this logic.)
For reference the behavior described in MathML Core (
https://www.w3.org/TR/mathml-core/#fractions-mfrac
):
> If the <mfrac> element has less or more than two in-flow children, its layout algorithm is the same as the mrow element. Otherwise, the first in-flow child is called numerator, the second in-flow child is called denominator and the layout algorithm is explained below.
We should probably review all the MathML elements and see if they follow this logic.
zalan
Comment 4
2024-07-03 05:24:58 PDT
(In reply to Frédéric Wang (:fredw) from
comment #3
)
> Comment on
attachment 471770
[details]
> [fast-cq]Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=471770&action=review
> > > COMMIT_MESSAGE:8 > > +(Alternatively we can mark such content as invalid as they are certainly expected to be inflow boxes, but the rest of the MathML renderers follow this logic.) > > For reference the behavior described in MathML Core ( >
https://www.w3.org/TR/mathml-core/#fractions-mfrac
): > > > If the <mfrac> element has less or more than two in-flow children, its layout algorithm is the same as the mrow element. Otherwise, the first in-flow child is called numerator, the second in-flow child is called denominator and the layout algorithm is explained below.
Thank you! I did a quick search before submitting this patch and landed on the spec, hence my hesitation in the changelog entry.
> > We should probably review all the MathML elements and see if they follow > this logic.
Yeah, we should certainly do that!
Frédéric Wang (:fredw)
Comment 5
2024-07-04 04:04:51 PDT
(In reply to zalan from
comment #4
)
> > We should probably review all the MathML elements and see if they follow > > this logic. > Yeah, we should certainly do that!
OK apparently I already had opened
bug 179739
for that and more recently MathML Core specified how to handle it. I'll propose this task to an Igalia's Coding Experience student.
zalan
Comment 6
2024-07-04 05:24:36 PDT
(In reply to Frédéric Wang (:fredw) from
comment #5
)
> (In reply to zalan from
comment #4
) > > > We should probably review all the MathML elements and see if they follow > > > this logic. > > Yeah, we should certainly do that! > > OK apparently I already had opened
bug 179739
for that and more recently > MathML Core specified how to handle it. I'll propose this task to an > Igalia's Coding Experience student.
Awesome! Thank you for taking care of this!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug