[MathML] <mfrac> with out-of-flow numerator/denominator produces unexpected result https://bugs.webkit.org/show_bug.cgi?id=276026 <rdar://130757408>

Reviewed by Simon Fraser.

Out-of-flow (numerator/denominator) children have to get inserted to their containing block's list while running inflow layout.
(Alternatively we can mark such content as invalid as they are certainly expected to be inflow boxes, but the rest of the MathML renderers follow this logic.)

* LayoutTests/mathml/out-of-flow-fraction-content-crash-expected.txt: Added.
* LayoutTests/mathml/out-of-flow-fraction-content-crash.html: Added.
* Source/WebCore/rendering/mathml/RenderMathMLFraction.cpp:
(WebCore::RenderMathMLFraction::layoutBlock):

Canonical link: https://commits.webkit.org/280505@main